<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/teal_200"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/str_pharma_zone"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/_14sdp" />
        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:id="@+id/txtPickMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="Date"
            android:paddingVertical="@dimen/_10sdp"
            android:text="November, 2022"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolBar" />

        <ImageView
            android:layout_width="@dimen/_16sdp"
            android:layout_height="@dimen/_16sdp"
            android:layout_marginLeft="@dimen/_2sdp"
            android:src="@drawable/ic_baseline_arrow_down_24"
            app:layout_constraintBottom_toBottomOf="@+id/txtPickMonth"
            app:layout_constraintLeft_toRightOf="@+id/txtPickMonth"
            app:layout_constraintTop_toTopOf="@+id/txtPickMonth" />

        <com.shawnlin.numberpicker.NumberPicker
            android:id="@+id/numberPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtPickMonth"
            app:np_dividerColor="#00000000"
            app:np_formatter="@string/number_picker_formatter"
            app:np_height="@dimen/_45sdp"
            app:np_max="31"
            app:np_min="1"
            app:np_orientation="horizontal"
            app:np_selectedTextColor="@color/teal_200"
            app:np_selectedTextSize="@dimen/_18sdp"
            app:np_textColor="@color/grey"
            app:np_textSize="@dimen/_16sdp"
            app:np_value="15"
            app:np_wheelItemCount="5"
            app:np_width="@dimen/_250sdp" />

        <View
            android:id="@+id/view2"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/grey"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/numberPicker" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardSales"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_4sdp"
            app:cardBackgroundColor="@color/teal_200"
            app:cardCornerRadius="@dimen/_8sdp"
            app:cardElevation="@dimen/_1sdp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view2">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_12sdp">

                <TextView
                    android:id="@+id/txtSales"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Sales"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_16sdp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="Date"
                    android:paddingVertical="@dimen/_10sdp"
                    android:text="@string/str_view_more"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_12sdp"
                    app:layout_constraintBottom_toBottomOf="@+id/txtSales"
                    app:layout_constraintRight_toLeftOf="@+id/imgNextSales"
                    app:layout_constraintTop_toTopOf="@+id/txtSales" />

                <ImageView
                    android:id="@+id/imgNextSales"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_marginLeft="@dimen/_2sdp"
                    android:src="@drawable/ic_baseline_right_24"
                    app:layout_constraintBottom_toBottomOf="@+id/txtSales"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/txtSales"
                    app:tint="@android:color/white" />

                <TextView
                    android:id="@+id/txtKD"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:gravity="center"
                    android:text="KD 0.000"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_18sdp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtSales" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:gravity="center"
                    android:text="0 Transactions"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_12sdp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtKD" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardCreditCard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_4sdp"
            app:cardBackgroundColor="@color/teal_200"
            app:cardCornerRadius="@dimen/_8sdp"
            app:cardElevation="@dimen/_1sdp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardSales">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_12sdp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardProgress"
                    android:layout_width="0dp"
                    app:cardCornerRadius="@dimen/_10sdp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_height="@dimen/_20sdp"/>

                <TextView
                    android:layout_marginTop="@dimen/_8sdp"
                    android:id="@+id/txtDebitCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/str_debit_card"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_14sdp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cardProgress" />

                <TextView
                    android:layout_marginTop="@dimen/_8sdp"
                    android:id="@+id/txtCreditCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/str_credit_card"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_14sdp"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cardProgress" />

                <TextView
                    android:id="@+id/txtKDDebitCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:gravity="center"
                    android:text="KD 0.000"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_15sdp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtDebitCard" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:gravity="center"
                    android:text="0 Transactions"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_12sdp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtKDDebitCard" />

                <TextView
                    android:id="@+id/txtKDCreditCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:gravity="center"
                    android:text="KD 0.000"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_15sdp"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtDebitCard" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:gravity="center"
                    android:text="0 Transactions"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_12sdp"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtKDCreditCard" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabFilter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="16dp"
            android:contentDescription="@string/filter"
            android:src="@drawable/ic_filter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>